Opened 4 years ago
Closed 18 months ago
#16760 closed bug (fixed)
IOM: Selection of multiple path vertices broken
Reported by: | humdinger | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Applications/Icon-O-Matic | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #18065 | |
Platform: | All |
Description
It worked in Beta1 (only tested 32bit) but not Beta 2 (only tested 64bit), so it broke sometime between those releases...
You used to be able to select multiple path vertices with a click-drag selection-frame, or even select all with ALT+A (or from the context menu). Then you could go ahead and transform (ALT+T) the selected vertices, e.g. move, rotate etc.
Selected vertices have a red border. I suggest observing what's going on with a large Magnify window. It's weird and hard to describe, some become selected when they get inside the selection-frame, other vertices become un-selected... Sometimes it's difficult to enter selection mode - the mouse pointer doesn't change accordingly.
Change History (2)
comment:1 by , 2 years ago
Blocking: | 18065 added |
---|
comment:2 by , 18 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fix merged in hrev57241.